--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,7 @@
             </p>
             <div class="mt-4 sm:mt-6">
                 <a href="#"
-                   class="inline-block px-5 py-3 rounded-lg bg-indigo-400 hover:bg-indigo-500 text-sm text-white active:bg-indigo-900 shadow-lg uppercase tracking-wider font-semibold sm:text-base">Book
-                    your escape</a>
+                   class="btn">Book your escape</a>
             </div>
         </div>
     </div>
